src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void VolumeSettings_setMaxDepth_0(void* self, float val);
extern "C" __declspec(dllexport) float VolumeSettings_getMaxDepth_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setMaxWeight_0(void* self, int val);
extern "C" __declspec(dllexport) int VolumeSettings_getMaxWeight_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setRaycastStepFactor_0(void* self, float val);
extern "C" __declspec(dllexport) float VolumeSettings_getRaycastStepFactor_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setVolumePose_0(void* self, void* val);
extern "C" __declspec(dllexport) void VolumeSettings_getVolumePose_0(void* self, void* val);
extern "C" __declspec(dllexport) void VolumeSettings_setVolumeResolution_0(void* self, void* val);
extern "C" __declspec(dllexport) void VolumeSettings_getVolumeResolution_0(void* self, void* val);
extern "C" __declspec(dllexport) void VolumeSettings_getVolumeStrides_0(void* self, void* val);
extern "C" __declspec(dllexport) void VolumeSettings_setCameraIntegrateIntrinsics_0(void* self, void* val);
extern "C" __declspec(dllexport) void VolumeSettings_getCameraIntegrateIntrinsics_0(void* self, void* val);
extern "C" __declspec(dllexport) void VolumeSettings_setCameraRaycastIntrinsics_0(void* self, void* val);
extern "C" __declspec(dllexport) void VolumeSettings_getCameraRaycastIntrinsics_0(void* self, void* val);
extern "C" __declspec(dllexport) void detail_PoseGraph_Delete(void* self);
extern "C" __declspec(dllexport) void cv_loadPointCloud_0(const char* filename, void* vertices, void* normals, void* rgb);
extern "C" __declspec(dllexport) void cv_savePointCloud_0(const char* filename, void* vertices, void* normals, void* rgb);
extern "C" __declspec(dllexport) void cv_loadMesh_0(const char* filename, void* vertices, void* indices, void* normals, void* colors, void* texCoords);
extern "C" __declspec(dllexport) void cv_saveMesh_0(const char* filename, void* vertices, void* indices, void* normals, void* colors, void* texCoords);
extern "C" __declspec(dllexport) void cv_triangleRasterize_0(void* vertices, void* indices, void* colors, void* colorBuf, void* depthBuf, void* world2cam, double fovY, double zNear, double zFar, void* settings);
extern "C" __declspec(dllexport) void cv_triangleRasterizeDepth_0(void* vertices, void* indices, void* depthBuf, void* world2cam, double fovY, double zNear, double zFar, void* settings);
extern "C" __declspec(dllexport) void cv_triangleRasterizeColor_0(void* vertices, void* indices, void* colors, void* colorBuf, void* world2cam, double fovY, double zNear, double zFar, void* settings);
extern "C" __declspec(dllexport) void cv_registerDepth_0(void* unregisteredCameraMatrix, void* registeredCameraMatrix, void* registeredDistCoeffs, void* Rt, void* unregisteredDepth, cv::Size outputImagePlaneSize, void* registeredDepth, bool depthDilation);
extern "C" __declspec(dllexport) void cv_depthTo3dSparse_0(void* depth, void* in_K, void* in_points, void* points3d);
extern "C" __declspec(dllexport) void cv_depthTo3d_0(void* depth, void* K, void* points3d, void* mask);
extern "C" __declspec(dllexport) void cv_rescaleDepth_0(void* in, int type, void* out, double depth_factor);
extern "C" __declspec(dllexport) void cv_warpFrame_0(void* depth, void* image, void* mask, void* Rt, void* cameraMatrix, void* warpedDepth, void* warpedImage, void* warpedMask);
extern "C" __declspec(dllexport) void cv_findPlanes_0(void* points3d, void* normals, void* mask, void* plane_coefficients, int block_size, int min_size, double threshold, double sensor_error_a, double sensor_error_b, double sensor_error_c, int method);