src/OpenCV5Sharp/Generated/NativeMethods.Ptcloud.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setMaxDepth_0(VolumeSettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VolumeSettings_getMaxDepth_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setMaxWeight_0(VolumeSettingsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int VolumeSettings_getMaxWeight_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setRaycastStepFactor_0(VolumeSettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VolumeSettings_getRaycastStepFactor_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setVolumePose_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_getVolumePose_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setVolumeResolution_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_getVolumeResolution_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_getVolumeStrides_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setCameraIntegrateIntrinsics_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_getCameraIntegrateIntrinsics_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setCameraRaycastIntrinsics_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_getCameraRaycastIntrinsics_0(VolumeSettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_PoseGraph_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_loadPointCloud_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, MatHandle vertices, IntPtr normals, IntPtr rgb);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_savePointCloud_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, MatHandle vertices, IntPtr normals, IntPtr rgb);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_loadMesh_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, MatHandle vertices, IntPtr indices, IntPtr normals, IntPtr colors, IntPtr texCoords);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_saveMesh_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, MatHandle vertices, IntPtr indices, IntPtr normals, IntPtr colors, IntPtr texCoords);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_triangleRasterize_0(MatHandle vertices, MatHandle indices, MatHandle colors, MatHandle colorBuf, MatHandle depthBuf, MatHandle world2cam, double fovY, double zNear, double zFar, IntPtr settings);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_triangleRasterizeDepth_0(MatHandle vertices, MatHandle indices, MatHandle depthBuf, MatHandle world2cam, double fovY, double zNear, double zFar, IntPtr settings);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_triangleRasterizeColor_0(MatHandle vertices, MatHandle indices, MatHandle colors, MatHandle colorBuf, MatHandle world2cam, double fovY, double zNear, double zFar, IntPtr settings);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_registerDepth_0(MatHandle unregisteredCameraMatrix, MatHandle registeredCameraMatrix, MatHandle registeredDistCoeffs, MatHandle Rt, MatHandle unregisteredDepth, Size outputImagePlaneSize, MatHandle registeredDepth, [MarshalAs(UnmanagedType.U1)] bool depthDilation);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_depthTo3dSparse_0(MatHandle depth, MatHandle in_K, MatHandle in_points, MatHandle points3d);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_depthTo3d_0(MatHandle depth, MatHandle K, MatHandle points3d, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_rescaleDepth_0(MatHandle @in, int type, MatHandle @out, double depth_factor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_warpFrame_0(MatHandle depth, MatHandle image, MatHandle mask, MatHandle Rt, MatHandle cameraMatrix, IntPtr warpedDepth, IntPtr warpedImage, IntPtr warpedMask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_findPlanes_0(MatHandle points3d, MatHandle normals, MatHandle mask, MatHandle plane_coefficients, int block_size, int min_size, double threshold, double sensor_error_a, double sensor_error_b, double sensor_error_c, int method);
    }
}
